sol/2016_p2_f2_ciclovias.txt
Ciclovias
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 1,4 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2016f2p2_ciclovias.cpp: In function ‘void dfs(int, int)’:
2016f2p2_ciclovias.cpp:12:22: error: ‘INT_MAX’ was not declared in this scope
   12 |     int mx = 0, mn = INT_MAX;
      |                      ^~~~~~~
2016f2p2_ciclovias.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <queue>
  +++ |+#include <climits>
    4 |
